# array-as-struct

./: Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: lib.rs
src/: lib.rs
tests/: test.rs
