[package]
categories = ["proc-macros"]
name = "array-as-struct-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
itertools = "0.12"
proc-macro-crate = "3"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", default-features = false, features = ["parsing", "printing", "proc-macro", "derive", "clone-impls", "extra-traits"] }
