[package]
name = "array-as-struct-derive"
version = "0.1.0"
authors = ["Daniel Bloom"]
edition = "2021"
description = "proc macros for the array-as-struct crate"
readme = "../README.md"
repository = "https://github.com/Daniel-Aaron-Bloom/array-as-struct"
license = "MIT OR Apache-2.0"
keywords = ["struct", "array", "field", "conversion", "named-fields"]
categories = ["proc-macros"]

[lib]
proc-macro = true

[dependencies]
itertools = "0.12"
proc-macro-crate = "3"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", default-features = false, features = ["parsing", "printing", "proc-macro", "derive", "clone-impls", "extra-traits"] }
